--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,18 +39,18 @@ services:
       - SE_NODE_OVERRIDE_MAX_SESSIONS=true
       - SE_NODE_GRID_URL=http://localhost:4444/
 
-  edge:
-    image: selenium/node-edge:beta
-    shm_size: 2gb
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SE_NODE_MAX_SESSIONS=1
-      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
-      - SE_NODE_GRID_URL=http://localhost:4444/
+#  edge:
+#    image: selenium/node-edge:beta
+#    shm_size: 2gb
+#    depends_on:
+#      - selenium-hub
+#    environment:
+#      - SE_EVENT_BUS_HOST=selenium-hub
+#      - SE_EVENT_BUS_PUBLISH_PORT=4442
+#      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+#      - SE_NODE_MAX_SESSIONS=1
+#      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+#      - SE_NODE_GRID_URL=http://localhost:4444/
 
   selenium-hub:
     image: selenium/hub:latest
